// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly When auth has been fetched and is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        color="black"
        fluid={true}
        inverted={true}
        pointing={true}
        secondary={true}
        size="huge"
>
        <MenuItem
                active={false}
                as={[Function]}
                content="Home"
                onClick={[Function]}
                to="/"
        />
        <MenuItem
                active={false}
                as={[Function]}
                content="Recipes"
                onClick={[Function]}
                to="/recipes"
        />
        <div
                className="right menu"
        >
                <MenuItem
                        content="Login With Google"
                        href="/auth/google"
                />
        </div>
</Menu>,
      "inverted": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem
            active={false}
            as={[Function]}
            content="Home"
            onClick={[Function]}
            to="/"
/>,
          false,
          <MenuItem
            active={false}
            as={[Function]}
            content="Recipes"
            onClick={[Function]}
            to="/recipes"
/>,
          <div
            className="right menu"
>
            <MenuItem
                        content="Login With Google"
                        href="/auth/google"
            />
</div>,
        ],
        "color": "black",
        "fluid": true,
        "inverted": true,
        "pointing": true,
        "secondary": true,
        "size": "huge",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Home",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Recipes",
            "onClick": [Function],
            "to": "/recipes",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <MenuItem
              content="Login With Google"
              href="/auth/google"
/>,
            "className": "right menu",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": "Login With Google",
              "href": "/auth/google",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          color="black"
          fluid={true}
          inverted={true}
          pointing={true}
          secondary={true}
          size="huge"
>
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Home"
                    onClick={[Function]}
                    to="/"
          />
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Recipes"
                    onClick={[Function]}
                    to="/recipes"
          />
          <div
                    className="right menu"
          >
                    <MenuItem
                              content="Login With Google"
                              href="/auth/google"
                    />
          </div>
</Menu>,
        "inverted": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              active={false}
              as={[Function]}
              content="Home"
              onClick={[Function]}
              to="/"
/>,
            false,
            <MenuItem
              active={false}
              as={[Function]}
              content="Recipes"
              onClick={[Function]}
              to="/recipes"
/>,
            <div
              className="right menu"
>
              <MenuItem
                            content="Login With Google"
                            href="/auth/google"
              />
</div>,
          ],
          "color": "black",
          "fluid": true,
          "inverted": true,
          "pointing": true,
          "secondary": true,
          "size": "huge",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Home",
              "onClick": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Recipes",
              "onClick": [Function],
              "to": "/recipes",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <MenuItem
                content="Login With Google"
                href="/auth/google"
/>,
              "className": "right menu",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "content": "Login With Google",
                "href": "/auth/google",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Should render correctly When auth has been fetched and is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        color="black"
        fluid={true}
        inverted={true}
        pointing={true}
        secondary={true}
        size="huge"
>
        <MenuItem
                active={false}
                as={[Function]}
                content="Home"
                onClick={[Function]}
                to="/"
        />
        <MenuItem
                active={false}
                as={[Function]}
                content="Dashboard"
                onClick={[Function]}
                to="/dashboard"
        />
        <MenuItem
                active={false}
                as={[Function]}
                content="Recipes"
                onClick={[Function]}
                to="/recipes"
        />
        <div
                className="right menu"
        >
                <MenuItem
                        content="Logout"
                        href="/auth/logout"
                />
        </div>
</Menu>,
      "inverted": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem
            active={false}
            as={[Function]}
            content="Home"
            onClick={[Function]}
            to="/"
/>,
          <MenuItem
            active={false}
            as={[Function]}
            content="Dashboard"
            onClick={[Function]}
            to="/dashboard"
/>,
          <MenuItem
            active={false}
            as={[Function]}
            content="Recipes"
            onClick={[Function]}
            to="/recipes"
/>,
          <div
            className="right menu"
>
            <MenuItem
                        content="Logout"
                        href="/auth/logout"
            />
</div>,
        ],
        "color": "black",
        "fluid": true,
        "inverted": true,
        "pointing": true,
        "secondary": true,
        "size": "huge",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Home",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Dashboard",
            "onClick": [Function],
            "to": "/dashboard",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Recipes",
            "onClick": [Function],
            "to": "/recipes",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <MenuItem
              content="Logout"
              href="/auth/logout"
/>,
            "className": "right menu",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": "Logout",
              "href": "/auth/logout",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          color="black"
          fluid={true}
          inverted={true}
          pointing={true}
          secondary={true}
          size="huge"
>
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Home"
                    onClick={[Function]}
                    to="/"
          />
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Dashboard"
                    onClick={[Function]}
                    to="/dashboard"
          />
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Recipes"
                    onClick={[Function]}
                    to="/recipes"
          />
          <div
                    className="right menu"
          >
                    <MenuItem
                              content="Logout"
                              href="/auth/logout"
                    />
          </div>
</Menu>,
        "inverted": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              active={false}
              as={[Function]}
              content="Home"
              onClick={[Function]}
              to="/"
/>,
            <MenuItem
              active={false}
              as={[Function]}
              content="Dashboard"
              onClick={[Function]}
              to="/dashboard"
/>,
            <MenuItem
              active={false}
              as={[Function]}
              content="Recipes"
              onClick={[Function]}
              to="/recipes"
/>,
            <div
              className="right menu"
>
              <MenuItem
                            content="Logout"
                            href="/auth/logout"
              />
</div>,
          ],
          "color": "black",
          "fluid": true,
          "inverted": true,
          "pointing": true,
          "secondary": true,
          "size": "huge",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Home",
              "onClick": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Dashboard",
              "onClick": [Function],
              "to": "/dashboard",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Recipes",
              "onClick": [Function],
              "to": "/recipes",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <MenuItem
                content="Logout"
                href="/auth/logout"
/>,
              "className": "right menu",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "content": "Logout",
                "href": "/auth/logout",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Should render correctly When auth has not been fetched 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    auth={null}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        color="black"
        fluid={true}
        inverted={true}
        pointing={true}
        secondary={true}
        size="huge"
>
        <MenuItem
                active={false}
                as={[Function]}
                content="Home"
                onClick={[Function]}
                to="/"
        />
        <MenuItem
                active={false}
                as={[Function]}
                content="Recipes"
                onClick={[Function]}
                to="/recipes"
        />
</Menu>,
      "inverted": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem
            active={false}
            as={[Function]}
            content="Home"
            onClick={[Function]}
            to="/"
/>,
          null,
          <MenuItem
            active={false}
            as={[Function]}
            content="Recipes"
            onClick={[Function]}
            to="/recipes"
/>,
          null,
        ],
        "color": "black",
        "fluid": true,
        "inverted": true,
        "pointing": true,
        "secondary": true,
        "size": "huge",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Home",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "active": false,
            "as": [Function],
            "content": "Recipes",
            "onClick": [Function],
            "to": "/recipes",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          color="black"
          fluid={true}
          inverted={true}
          pointing={true}
          secondary={true}
          size="huge"
>
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Home"
                    onClick={[Function]}
                    to="/"
          />
          <MenuItem
                    active={false}
                    as={[Function]}
                    content="Recipes"
                    onClick={[Function]}
                    to="/recipes"
          />
</Menu>,
        "inverted": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              active={false}
              as={[Function]}
              content="Home"
              onClick={[Function]}
              to="/"
/>,
            null,
            <MenuItem
              active={false}
              as={[Function]}
              content="Recipes"
              onClick={[Function]}
              to="/recipes"
/>,
            null,
          ],
          "color": "black",
          "fluid": true,
          "inverted": true,
          "pointing": true,
          "secondary": true,
          "size": "huge",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Home",
              "onClick": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "as": [Function],
              "content": "Recipes",
              "onClick": [Function],
              "to": "/recipes",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
